# gpt-module

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linting.yml  tests.yml
scripts/: autoclean.py  public.py
xiver-gpt/: README.md  __init__.py
xiver_gpt/: README.md  XiverGPT.py  __init__.py  the_s_of_idea.py
xiver_gpt/exceptions/: NoProvider.py  __init__.py
